--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
@@ -58,14 +59,12 @@
 
     <TextView
         android:id="@+id/tvCreatedAt"
-        android:layout_width="22dp"
-        android:layout_height="20dp"
+        android:layout_width="49dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="198dp"
         android:layout_marginTop="0dp"
-        android:layout_marginEnd="2dp"
-        android:layout_toEndOf="@+id/tvScreenName"
+        android:layout_marginEnd="1dp"
         tools:text="5m" />
 
 </RelativeLayout>
